@@ -3,7 +3,7 @@
  * http://www.pwm-project.org
  *
  * Copyright (c) 2006-2009 Novell, Inc.
- * Copyright (c) 2009-2019 The PWM Project
+ * Copyright (c) 2009-2020 The PWM Project
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -26,11 +26,13 @@ import password.pwm.error.ErrorInformation;
 import password.pwm.error.PwmError;
 import password.pwm.error.PwmException;
 import password.pwm.error.PwmUnrecoverableException;
+import password.pwm.util.java.StatisticCounterBundle;
 import password.pwm.util.java.TimeDuration;
 import password.pwm.util.logging.PwmLogger;
 
 import java.time.Instant;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
@@ -38,74 +40,95 @@ import java.util.Map;
 
 public class PwmServiceManager
 {
-
     private static final PwmLogger LOGGER = PwmLogger.forClass( PwmServiceManager.class );
 
-
-    private final PwmApplication pwmApplication;
-    private final Map<Class<? extends PwmService>, PwmService> runningServices = new HashMap<>();
+    private PwmApplication pwmApplication;
+    private final Map<PwmServiceEnum, PwmService> runningServices = new HashMap<>();
     private boolean initialized;
 
-    public PwmServiceManager( final PwmApplication pwmApplication )
+    public PwmServiceManager(  )
     {
-        this.pwmApplication = pwmApplication;
     }
 
-    public PwmService getService( final Class<? extends PwmService> serviceClass )
+    private enum InitializationStats
+    {
+        starts,
+        stops,
+        restarts,
+    }
+
+    public PwmService getService( final PwmServiceEnum serviceClass )
     {
         return runningServices.get( serviceClass );
     }
 
-    public void initAllServices( )
+    public void initAllServices( final PwmApplication pwmApplication )
             throws PwmUnrecoverableException
     {
+        this.pwmApplication = pwmApplication;
         final Instant startTime = Instant.now();
 
         final boolean internalRuntimeInstance = pwmApplication.getPwmEnvironment().isInternalRuntimeInstance()
                 || pwmApplication.getPwmEnvironment().getFlags().contains( PwmEnvironment.ApplicationFlag.CommandLineInstance );
 
-        int serviceCounter = 0;
+        final String logVerb = initialized ? "restart" : "start";
+        final StatisticCounterBundle<InitializationStats> statCounter = new StatisticCounterBundle<>( InitializationStats.class );
+        LOGGER.trace( () -> "beginning service " + logVerb + " process" );
 
         for ( final PwmServiceEnum serviceClassEnum : PwmServiceEnum.values() )
         {
-            boolean startService = true;
+            boolean serviceShouldBeRunning = true;
             if ( internalRuntimeInstance && !serviceClassEnum.isInternalRuntime() )
             {
-                startService = false;
+                serviceShouldBeRunning = false;
             }
-            if ( startService )
+
+            if ( serviceShouldBeRunning )
             {
-                final Class<? extends PwmService> serviceClass = serviceClassEnum.getPwmServiceClass();
-                final PwmService newServiceInstance = initService( serviceClass );
-                runningServices.put( serviceClass, newServiceInstance );
-                serviceCounter++;
+                if ( runningServices.containsKey( serviceClassEnum ) )
+                {
+                    shutDownService( serviceClassEnum, runningServices.get( serviceClassEnum ) );
+                    statCounter.increment( InitializationStats.restarts );
+                }
+                else
+                {
+                    statCounter.increment( InitializationStats.starts );
+                }
+
+                final PwmService newServiceInstance = initService( serviceClassEnum );
+                runningServices.put( serviceClassEnum, newServiceInstance );
+            }
+            else
+            {
+                if ( runningServices.containsKey( serviceClassEnum ) )
+                {
+                    shutDownService( serviceClassEnum, runningServices.get( serviceClassEnum ) );
+                    statCounter.increment( InitializationStats.stops );
+                }
             }
         }
 
         initialized = true;
 
-        final TimeDuration timeDuration = TimeDuration.fromCurrent( startTime );
-        {
-            final int finalServiceCounter = serviceCounter;
-            LOGGER.trace( () -> "started " + finalServiceCounter + " services in " + timeDuration.asCompactString() );
-        }
+        LOGGER.trace( () -> logVerb + "ed services, " + statCounter.debugStats(), () -> TimeDuration.fromCurrent( startTime ) );
     }
 
-    private PwmService initService( final Class<? extends PwmService> serviceClass )
+    private PwmService initService( final PwmServiceEnum pwmServiceEnum )
             throws PwmUnrecoverableException
     {
         final Instant startTime = Instant.now();
         final PwmService newServiceInstance;
-        final String serviceName = serviceClass.getName();
+
+        final String serviceName = pwmServiceEnum.serviceName();
         try
         {
-            final Object newInstance = serviceClass.newInstance();
-            newServiceInstance = ( PwmService ) newInstance;
+            final Class<? extends PwmService> serviceClass = pwmServiceEnum.getPwmServiceClass();
+            newServiceInstance = serviceClass.getDeclaredConstructor().newInstance();
         }
         catch ( final Exception e )
         {
             final String errorMsg = "unexpected error instantiating service class '" + serviceName + "', error: " + e.toString();
-            LOGGER.fatal( errorMsg, e );
+            LOGGER.fatal( () -> errorMsg, e );
             throw new PwmUnrecoverableException( new ErrorInformation( PwmError.ERROR_STARTUP_ERROR, errorMsg ) );
         }
 
@@ -118,7 +141,7 @@ public class PwmServiceManager
         }
         catch ( final PwmException e )
         {
-            LOGGER.warn( "error instantiating service class '" + serviceName + "', service will remain unavailable, error: " + e.getMessage() );
+            LOGGER.warn( () -> "error instantiating service class '" + serviceName + "', service will remain unavailable, error: " + e.getMessage() );
         }
         catch ( final Exception e )
         {
@@ -127,7 +150,9 @@ public class PwmServiceManager
             {
                 errorMsg += ", cause: " + e.getCause();
             }
-            LOGGER.fatal( errorMsg );
+            final String errorMsgFinal = errorMsg;
+            LOGGER.fatal( () -> errorMsgFinal );
+            e.printStackTrace();
             throw new PwmUnrecoverableException( new ErrorInformation( PwmError.ERROR_STARTUP_ERROR, errorMsg ) );
         }
         return newServiceInstance;
@@ -144,35 +169,35 @@ public class PwmServiceManager
         final Instant startTime = Instant.now();
 
 
-        final List<Class<? extends PwmService>> reverseServiceList = new ArrayList<>( PwmServiceEnum.allClasses() );
+        final List<PwmServiceEnum> reverseServiceList = Arrays.asList( PwmServiceEnum.values() );
         Collections.reverse( reverseServiceList );
-        for ( final Class<? extends PwmService> serviceClass : reverseServiceList )
+        for ( final PwmServiceEnum pwmServiceEnum : reverseServiceList )
         {
-            if ( runningServices.containsKey( serviceClass ) )
+            if ( runningServices.containsKey( pwmServiceEnum ) )
             {
-                shutDownService( serviceClass );
+                shutDownService( pwmServiceEnum, runningServices.get( pwmServiceEnum ) );
             }
         }
         initialized = false;
 
-        LOGGER.trace( () -> "closed all services in " + TimeDuration.compactFromCurrent( startTime ) );
+        LOGGER.trace( () -> "closed all services in ", () -> TimeDuration.fromCurrent( startTime ) );
     }
 
-    private void shutDownService( final Class<? extends PwmService> serviceClass )
+    private void shutDownService( final PwmServiceEnum pwmServiceEnum, final PwmService serviceInstance )
     {
 
-        LOGGER.trace( () -> "closing service " + serviceClass.getName() );
-        final PwmService loopService = runningServices.get( serviceClass );
+        LOGGER.trace( () -> "closing service " + pwmServiceEnum.serviceName() );
+
         try
         {
             final Instant startTime = Instant.now();
-            loopService.close();
+            serviceInstance.close();
             final TimeDuration timeDuration = TimeDuration.fromCurrent( startTime );
-            LOGGER.trace( () -> "successfully closed service " + serviceClass.getName() + " (" + timeDuration.asCompactString() + ")" );
+            LOGGER.trace( () -> "successfully closed service " + pwmServiceEnum.serviceName() + " (" + timeDuration.asCompactString() + ")" );
         }
         catch ( final Exception e )
         {
-            LOGGER.error( "error closing " + loopService.getClass().getSimpleName() + ": " + e.getMessage(), e );
+            LOGGER.error( () -> "error closing " + pwmServiceEnum.serviceName() + ": " + e.getMessage(), e );
         }
     }
 
